--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,9 @@ jobs:
         run: docker build -t ${{ env.PROJECT_NAME }} .
 
       - name: Export Docker image as tar
-        run: docker save ${{ env.PROJECT_NAME }} -o ${{ env.PROJECT_NAME }}.tar
+        run: |
+          mkdir -p docker
+          docker save ${{ env.PROJECT_NAME }} -o docker/${{ env.PROJECT_NAME }}.tar
 
       - name: Clean old tar on VPS
         uses: appleboy/ssh-action@v0.1.10
@@ -41,8 +43,8 @@ jobs:
           username: "${{ secrets.VPS_USER }}"
           key: "${{ secrets.VPS_SSH_KEY }}"
           port: "${{ secrets.VPS_PORT }}"
-          source: "${{ env.PROJECT_NAME }}.tar"
-          target: "${{ env.PROJECT_DIR }}/"
+          source: "docker/${{ env.PROJECT_NAME }}.tar"
+          target: "${{ env.PROJECT_DIR }}/docker/"
 
       - name: Load and run image on VPS
         uses: appleboy/ssh-action@v0.1.10
@@ -54,7 +56,7 @@ jobs:
           script: |
             cd ${{ env.PROJECT_DIR }}
 
-            echo "📦 Loading Docker image..."
+            cd ${{ env.PROJECT_DIR }}/docker
             docker load -i ${{ env.PROJECT_NAME }}.tar
 
             echo "🧹 Stopping and removing existing container (if any)..."
