--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
           key: "${{ secrets.VPS_SSH_KEY }}"
           port: "${{ secrets.VPS_PORT }}"
           source: "${{ env.DOCKER_DIR }}/${{ env.PROJECT_NAME }}.tar"
-          target: "${{ env.PROJECT_DIR }}/${{ env.DOCKER_DIR }}/"
+          target: "${{ env.PROJECT_DIR }}/"
 
       - name: Load and run image on VPS
         uses: appleboy/ssh-action@v0.1.10
