--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,28 +9,24 @@ on:
 env:
   PROJECT_NAME: website
   PROJECT_DIR: ~/projects/website
-  DOCKER_DIR: docker  # local-only directory for temporary tar file
+  DOCKER_DIR: docker
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latests
 
     steps:
-      # Checkout the current repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Build Docker image locally from the Dockerfile
       - name: Build Docker image
         run: docker build -t ${{ env.PROJECT_NAME }} .
 
-      # Export Docker image to a tar file in a local build folder
       - name: Export Docker image as tar
         run: |
           mkdir -p ${{ env.DOCKER_DIR }}
           docker save ${{ env.PROJECT_NAME }} -o ${{ env.DOCKER_DIR }}/${{ env.PROJECT_NAME }}.tar
 
-      # Remove previous tar file from the VPS if it exists
       - name: Clean old tar on VPS
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -39,9 +35,8 @@ jobs:
           key: "${{ secrets.VPS_SSH_KEY }}"
           port: "${{ secrets.VPS_PORT }}"
           script: |
-            rm -f ${{ env.PROJECT_DIR }}/${{ env.PROJECT_NAME }}.tar
+            rm -rf ${{ env.PROJECT_DIR }}/${{ env.DOCKER_DIR }}/${{ env.PROJECT_NAME }}.tar
 
-      # Transfer new tar image to the root project folder on the VPS
       - name: Copy image to VPS
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -52,7 +47,6 @@ jobs:
           source: "${{ env.DOCKER_DIR }}/${{ env.PROJECT_NAME }}.tar"
           target: "${{ env.PROJECT_DIR }}/"
 
-      # Load Docker image on the VPS and restart the container
       - name: Load and run image on VPS
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -61,14 +55,16 @@ jobs:
           key: "${{ secrets.VPS_SSH_KEY }}"
           port: "${{ secrets.VPS_PORT }}"
           script: |
-            cd ${{ env.PROJECT_DIR }}
+            cd ${{ env.PROJECT_DIR }}/${{ env.DOCKER_DIR }}
             docker load -i ${{ env.PROJECT_NAME }}.tar
 
-            # Stop and remove existing container if it exists
+            echo "🧹 Stopping and removing existing container (if any)..."
             docker stop ${{ env.PROJECT_NAME }} || true
             docker rm ${{ env.PROJECT_NAME }} || true
 
-            # Start the container and mount the videos folder
+            echo "🚀 Running new container..."
             docker run -d --name ${{ env.PROJECT_NAME }} -p 80:80 \
               -v ${{ env.PROJECT_DIR }}/videos:/usr/local/apache2/htdocs/videos \
               ${{ env.PROJECT_NAME }}
+
+            echo "✅ Deployed successfully"
