--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latests
 
     steps:
+    # Test
       - name: Checkout repository
         uses: actions/checkout@v3
 
